--- a/.github/workflows/Push2.yml
+++ b/.github/workflows/Push2.yml
@@ -32,6 +32,6 @@ jobs:
     needs: job1
     steps:
       - env:
-          OUTPUT1: ${{needs.job1.outputs.output1}}
+          OUTPUT1: ${{ fromJSON( needs.job1.outputs.output1 ).test }}
           OUTPUT2: ${{needs.job1.outputs.output2}}
         run: echo "$OUTPUT1 $OUTPUT2"
