--- a/.github/workflows/Push2.yml
+++ b/.github/workflows/Push2.yml
@@ -10,7 +10,7 @@ jobs:
   job1:
     runs-on: ubuntu-latest
     outputs:
-      output1: ${{ steps.step.outputs.test }}
+      output1: ${{ steps.step.outputs.outputs }}
       output2: ${{ steps.step2.outputs.test }}
     steps:
       - id: step
