--- a/.github/workflows/Push2.yml
+++ b/.github/workflows/Push2.yml
@@ -14,18 +14,14 @@ jobs:
       output2: ${{ steps.step2.outputs.test }}
     steps:
       - id: step
-        # env:
-        #   GITHUB_OUTPUT: ${{ github.output }}
         uses: dmvict/wretry.action@alternative_master
         with:
           attempt_limit: 3
-          action: dmvict/test.action@master
+          command: echo "test=hello" >> "$GITHUB_OUTPUT"
       # - id: step2
       #   uses: dmvict/test.action@master
       #   with:
       #     any: 3
-      # - run: echo $GITHUB_OUTPUT
-      # - run: cat $GITHUB_OUTPUT
 
   job2:
     runs-on: ubuntu-latest
