--- a/alpine.yml
+++ b/alpine.yml
@@ -1,5 +1,5 @@
 image:
-  description: My Alpine Linux
+  description: alpine-js
   distribution: minimalalpine
   release: 3.18.0
 
@@ -174,6 +174,10 @@ packages:
     action: install
 
   - packages:
+    - python3
+    action: install
+
+  - packages:
     - doas
     action: install
     releases:
@@ -216,6 +220,15 @@ actions:
     set -eux
 
     rm -f /var/cache/apk/*
+
+- trigger: post-packages
+  action: |-
+    #!/bin/sh
+    set -eux
+    python3 -m venv /opt/certbot/
+    /opt/certbot/bin/pip install --upgrade pip
+    /opt/certbot/bin/pip install certbot certbot-dns-bunny
+    ln -s /opt/certbot/bin/certbot /usr/bin/certbot
 
 - trigger: post-packages
   action: |-
