--- a/alpine.yml
+++ b/alpine.yml
@@ -235,6 +235,8 @@ actions:
     mkdir /www
     chown -R www:www /var/lib/nginx
     chown -R www:www /www
+    cp /etc/nginx/nginx.conf /etc/nginx/nginx.conf.bk
+    cp /etc/haproxy/haproxy.cfg /etc/haproxy/haproxy.cfg.bk
 
 - trigger: post-packages
   action: |-
