--- a/.github/workflows/Push2.yml
+++ b/.github/workflows/Push2.yml
@@ -8,7 +8,7 @@ on : push
 
 jobs:
   job1:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     # outputs:
     #   output1: ${{ steps.step.outputs.outputs }}
     #   output2: ${{ steps.step2.outputs.test }}
