--- a/.github/workflows/Push2.yml
+++ b/.github/workflows/Push2.yml
@@ -21,7 +21,7 @@ jobs:
           file: ./out/v0.0.4.md
           asset_name: v0.0.4.md
           overwrite: true
-          tag: ${{ github.ref == 'master' && 'nightly'-github.ref || 'nightly' }}
+          tag: ${{ github.ref == 'master' && github.ref || 'nightly' }}
       # - id: action
       #   uses: Wandalen/wretry.action@master
       #   with:
