--- a/.github/workflows/Push2.yml
+++ b/.github/workflows/Push2.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - run: echo ${{ github.ref }}
+      - run: echo ${{ github.ref == 'master' }}
       - name: Upload binaries to release tag
         uses: svenstaro/upload-release-action@v2
         with:
