--- a/.github/workflows/Push2.yml
+++ b/.github/workflows/Push2.yml
@@ -25,7 +25,7 @@ jobs:
           file: ./out/v0.0.4.md
           asset_name: v0.0.4.md
           overwrite: true
-          tag: ${{ github.ref_name == 'master' && github.ref || 'nightly' }}
+          tag: ${{ github.ref_name == 'master' && format('{0}-{1}', 'nightly', github.ref_name) || 'nightly' }}
       # - id: action
       #   uses: Wandalen/wretry.action@master
       #   with:
