--- a/.github/workflows/Push2.yml
+++ b/.github/workflows/Push2.yml
@@ -8,24 +8,24 @@ on : push
 
 jobs:
   job1:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     # outputs:
     #   output1: ${{ steps.step.outputs.outputs }}
     #   output2: ${{ steps.step2.outputs.test }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - run: echo ${{ github.ref }}
-      - run: echo ${{ github.ref == 'master' }}
-      - name: Upload binaries to release tag
-        uses: svenstaro/upload-release-action@v2
-        with:
-          repo_name: dmvict/Test
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ./out/v0.0.4.md
-          asset_name: v0.0.4.md
-          overwrite: true
-          tag: ${{ github.ref_name == 'master' && 'nightly' || format('{0}-{1}', 'nightly', github.ref_name) }}
+      # - name: Checkout
+      #   uses: actions/checkout@v3
+      # - run: echo ${{ github.ref }}
+      - run: date -I
+      # - name: Upload binaries to release tag
+      #   uses: svenstaro/upload-release-action@v2
+      #   with:
+      #     repo_name: dmvict/Test
+      #     repo_token: ${{ secrets.GITHUB_TOKEN }}
+      #     file: ./out/v0.0.4.md
+      #     asset_name: v0.0.4.md
+      #     overwrite: true
+      #     tag: ${{ github.ref_name == 'master' && 'nightly' || format('{0}-{1}', 'nightly', github.ref_name) }}
       # - id: action
       #   uses: Wandalen/wretry.action@master
       #   with:format('{0}-{1}', 'nightly', github.ref_name)
