--- a/.github/workflows/Push2.yml
+++ b/.github/workflows/Push2.yml
@@ -8,7 +8,11 @@ on : push
 
 jobs:
   job1:
-    runs-on: macos-latest
+    strategy :
+      fail-fast : false
+      matrix :
+        os : [ ubuntu, windows, macos ]
+    runs-on : ${{ matrix.os }}-latest
     # outputs:
     #   output1: ${{ steps.step.outputs.outputs }}
     #   output2: ${{ steps.step2.outputs.test }}
@@ -16,7 +20,7 @@ jobs:
       # - name: Checkout
       #   uses: actions/checkout@v3
       # - run: echo ${{ github.ref }}
-      - run: date -I
+      - run: date '+%Y-%m-%d'
       # - name: Upload binaries to release tag
       #   uses: svenstaro/upload-release-action@v2
       #   with:
