--- a/.github/workflows/Exp.yml
+++ b/.github/workflows/Exp.yml
@@ -12,10 +12,12 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Configure git
+        env:
+          USER: dmvict
         run: |
-          git config user.name dmvict
-          git config user.email dmvict@gmail.com
-          git remote set-url origin https://dmvict:${{github.token}}@github.com/dmvict/Test.git
+          git config user.name ${{ env.USER }}
+          git config user.email dm.vict.kr@gmail.com
+          git remote set-url origin https://${{ env.USER }}:${{github.token}}@github.com/dmvict/Test.git
 
       - name: Commit updates
         run: |
