--- a/.github/workflows/Exp.yml
+++ b/.github/workflows/Exp.yml
@@ -17,7 +17,7 @@ jobs:
         run: |
           git config user.name ${{ env.USERNAME }}
           git config user.email dm.vict.kr@gmail.com
-          git remote set-url origin https://${{ env.USERNAME }}:${{ github.token }}@github.com/${{ github.repository }}.git
+          git remote set-url origin https://${{ github.repository_owner }}:${{ github.token }}@github.com/${{ github.repository }}.git
 
       - name: Commit updates
         run: |
