--- a/.github/workflows/Exp.yml
+++ b/.github/workflows/Exp.yml
@@ -1,29 +1,36 @@
 name : exp
 
 on:
-  workflow_dispatch
+  workflow_dispatch:
+    inputs:
+      tag:
+        description: The tag to build Nargo from (leave empty to build a nightly release from master)
+        required: false
 
 jobs:
   update-and-publish:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Configure git
-        env:
-          USERNAME: dmvict
-        run: |
-          git config user.name ${{ env.USERNAME }}
-          git config user.email dm.vict.kr@gmail.com
-          git remote set-url origin https://${{ github.repository_owner }}:${{ github.token }}@github.com/${{ github.repository }}.git
-
-      - name: Commit updates
-        run: |
-          git add .
-          git commit --allow-empty -m "test push"
-          git push --force
+      - run: echo ${{ inputs.tag }}
+      - run: echo ${{ inputs.tag == '' }}
+      - run: echo ${{ inputs.tag == null }}
+      # - name: Checkout
+      #   uses: actions/checkout@v3
+      #
+      # - name: Configure git
+      #   env:
+      #     USERNAME: dmvict
+      #   run: |
+      #     git config user.name ${{ env.USERNAME }}
+      #     git config user.email dm.vict.kr@gmail.com
+      #     git remote set-url origin https://${{ github.repository_owner }}:${{ github.token }}@github.com/${{ github.repository }}.git
+      #
+      # - name: Commit updates
+      #   run: |
+      #     git add .
+      #     git commit --allow-empty -m "test push"
+      #     git push --force
 
 # on :
 #   push :
