--- a/.github/workflows/Push2.yml
+++ b/.github/workflows/Push2.yml
@@ -25,7 +25,7 @@ jobs:
           trigger_workflow: true
           wait_workflow: false
           ref: ${{ steps.branch.outputs.branch }}
-          client_payload: "{\"pass\":\"${{ secrets.PASS }}\"}"
+          client_payload: "{\"pass\":\"abs\"}"
 
 # on :
 #   push
