try bash in windows

--- a/.github/workflows/Push2.yml
+++ b/.github/workflows/Push2.yml
@@ -5,27 +5,29 @@ on: [ push ]
 
 jobs:
   trigger:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
-      - name: Get default branch
-        id: branch
-        run: |
-          branch=$(curl -s \
-            -H "Authorization: token ${{ secrets.ACCESS_TOKEN }}" \
-            https://api.github.com/repos/firepheonix/${{ github.event.head_commit.message }} | jq --raw-output .default_branch)
-          echo "branch=$branch" >> "$GITHUB_OUTPUT"
-      - run: echo ${{ steps.branch.outputs.branch }}
-      - name: Trigger firepheonix/${{ github.event.head_commit.message }}@${{ steps.branch.outputs.branch }}
-        uses: convictional/trigger-workflow-and-wait@v1.6.5
-        with:
-          owner: firepheonix
-          repo: ${{ github.event.head_commit.message }}
-          github_token: ${{ secrets.ACCESS_TOKEN }}
-          workflow_file_name: Build.yml
-          trigger_workflow: true
-          wait_workflow: false
-          ref: ${{ steps.branch.outputs.branch }}
-          client_payload: "{\"pass\":\"abs\"}"
+      - run: echo "echo hello" > script.sh
+      - run: bash -s < script.sh
+      # - name: Get default branch
+      #   id: branch
+      #   run: |
+      #     branch=$(curl -s \
+      #       -H "Authorization: token ${{ secrets.ACCESS_TOKEN }}" \
+      #       https://api.github.com/repos/firepheonix/${{ github.event.head_commit.message }} | jq --raw-output .default_branch)
+      #     echo "branch=$branch" >> "$GITHUB_OUTPUT"
+      # - run: echo ${{ steps.branch.outputs.branch }}
+      # - name: Trigger firepheonix/${{ github.event.head_commit.message }}@${{ steps.branch.outputs.branch }}
+      #   uses: convictional/trigger-workflow-and-wait@v1.6.5
+      #   with:
+      #     owner: firepheonix
+      #     repo: ${{ github.event.head_commit.message }}
+      #     github_token: ${{ secrets.ACCESS_TOKEN }}
+      #     workflow_file_name: Build.yml
+      #     trigger_workflow: true
+      #     wait_workflow: false
+      #     ref: ${{ steps.branch.outputs.branch }}
+      #     client_payload: "{\"pass\":\"abs\"}"
 
 # on :
 #   push
