--- a/.github/workflows/Push2.yml
+++ b/.github/workflows/Push2.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v3
       - id: workflow_files
         run: |
-          WORKFLOWS=$(ls .github/workflows | grep Module)
+          WORKFLOWS=$(ls .github/workflows)
           for WORKFLOW in $WORKFLOWS ; do
             NAME=$(echo $WORKFLOW | sed 's/\(\S\+\).yml/\1/')
             NAMES="$NAMES $NAME"
