--- a/.github/workflows/Push2.yml
+++ b/.github/workflows/Push2.yml
@@ -21,7 +21,7 @@ jobs:
           NAMES=$(sed 's/\s\+/\n/g' <<< $NAMES)
           OUTPUT=$(echo "$NAMES" | jq -R -s -c 'split("\n")[1:-1]')
           echo "files={\"modules\":$OUTPUT}"
-          echo "files='{\"modules\":$OUTPUT\}'" >> GITHUB_OUTPUT
+          echo "files=$OUTPUT" >> GITHUB_OUTPUT
       - run: echo ${{ steps.workflow_files.outputs.files }}
   #
   # runs_check :
