--- a/.github/workflows/Push2.yml
+++ b/.github/workflows/Push2.yml
@@ -19,10 +19,10 @@ jobs:
             NAMES="$NAMES $NAME"
           done;
           NAMES=$(sed 's/\s\+/\n/g' <<< $NAMES)
-          OUTPUT=$(echo "$NAMES" | jq -R -s -c 'split("\n")[1:-1]')
-          echo "files={\"modules\":$OUTPUT}"
-          echo "files=$OUTPUT" >> GITHUB_OUTPUT
-          echo "ff=$OUTPUT" >> GITHUB_OUTPUT
+          OUT=$(echo "$NAMES" | jq -R -s -c 'split("\n")[1:-1]')
+          echo "files={\"modules\":$OUT}"
+          echo "files=$OUT" >> GITHUB_OUTPUT
+          echo "ff=$OUT" >> GITHUB_OUTPUT
       - run: echo ${{ steps.workflow_files.outputs.files }}
       - run: echo ${{ steps.workflow_files.outputs.ff }}
   #
