--- a/.github/workflows/Push2.yml
+++ b/.github/workflows/Push2.yml
@@ -13,19 +13,25 @@ jobs:
       - uses: actions/checkout@v3
       - id: workflow_files
         run: |
-          WORKFLOWS=$(ls .github/workflows)
-          for WORKFLOW in $WORKFLOWS ; do
-            NAME=$(echo $WORKFLOW | sed 's/\(\S\+\).yml/\1/')
-            NAMES="$NAMES $NAME"
-          done;
-          echo "ffa=$NAMES" >> GITHUB_OUTPUT
-
+          # WORKFLOWS=$(ls .github/workflows)
+          # for WORKFLOW in $WORKFLOWS ; do
+          #   NAME=$(echo $WORKFLOW | sed 's/\(\S\+\).yml/\1/')
+          #   NAMES="$NAMES $NAME"
+          # done;
+          # echo "ffa=$NAMES" >> GITHUB_OUTPUT
           # NAMES=$(sed 's/\s\+/\n/g' <<< $NAMES)
           # OUT=$(echo "$NAMES" | jq -R -s -c 'split("\n")[1:-1]')
           # echo "files={\"modules\":$OUT}"
           # echo "files=$OUT" >> GITHUB_OUTPUT
           # echo "ff='$OUT'" >> GITHUB_OUTPUT
           # echo "ffa=a" >> GITHUB_OUTPUT
+
+          WORKFLOWS=$(ls .github/workflows | grep Module)
+          for WORKFLOW in $WORKFLOWS ; do
+            NAME=$(cat .github/workflows/$WORKFLOW | grep -G '^name :' | sed 's/name\s*:\s\+\(\S*\)/\1/')
+            NAMES="$NAMES%0A$NAME"
+          done;
+          echo "files=$NAMES" >> GITHUB_OUTPUT
       - run: echo ${{ steps.workflow_files.outputs.files }}
       - run: echo ${{ steps.workflow_files.outputs.ff }}
       - run: echo ${{ steps.workflow_files.outputs.ffa }}
