--- a/.github/workflows/Push2.yml
+++ b/.github/workflows/Push2.yml
@@ -26,12 +26,12 @@ jobs:
           # echo "ff='$OUT'" >> GITHUB_OUTPUT
           # echo "ffa=a" >> GITHUB_OUTPUT
 
-          WORKFLOWS=$(ls .github/workflows)
-          for WORKFLOW in $WORKFLOWS ; do
-            NAME=$(cat .github/workflows/$WORKFLOW | grep -G '^name :' | sed 's/name\s*:\s\+\(\S*\)/\1/')
-            NAMES="$NAMES%0A$NAME"
-          done;
-          echo "files=$NAMES" >> GITHUB_OUTPUT
+          # WORKFLOWS=$(ls .github/workflows)
+          # for WORKFLOW in $WORKFLOWS ; do
+          #   NAME=$(cat .github/workflows/$WORKFLOW | grep -G '^name :' | sed 's/name\s*:\s\+\(\S*\)/\1/')
+          #   NAMES="$NAMES%0A$NAME"
+          # done;
+          echo "files=NAMES" >> GITHUB_OUTPUT
       - run: echo ${{ steps.workflow_files.outputs.files }}
       - run: echo ${{ steps.workflow_files.outputs.ff }}
       - run: echo ${{ steps.workflow_files.outputs.ffa }}
