--- a/.github/workflows/Push2.yml
+++ b/.github/workflows/Push2.yml
@@ -13,41 +13,24 @@ jobs:
       - uses: actions/checkout@v3
       - id: workflow_files
         run: |
-          # WORKFLOWS=$(ls .github/workflows)
-          # for WORKFLOW in $WORKFLOWS ; do
-          #   NAME=$(echo $WORKFLOW | sed 's/\(\S\+\).yml/\1/')
-          #   NAMES="$NAMES $NAME"
-          # done;
-          # echo "ffa=$NAMES" >> GITHUB_OUTPUT
-          # NAMES=$(sed 's/\s\+/\n/g' <<< $NAMES)
-          # OUT=$(echo "$NAMES" | jq -R -s -c 'split("\n")[1:-1]')
-          # echo "files={\"modules\":$OUT}"
-          # echo "files=$OUT" >> GITHUB_OUTPUT
-          # echo "ff='$OUT'" >> GITHUB_OUTPUT
-          # echo "ffa=a" >> GITHUB_OUTPUT
+          WORKFLOWS=$(ls .github/workflows)
+          for WORKFLOW in $WORKFLOWS ; do
+            NAME=$(echo $WORKFLOW | sed 's/\(\S\+\).yml/\1/')
+            NAMES="$NAMES $NAME"
+          done;
+          NAMES=$(sed 's/\s\+/\n/g' <<< $NAMES)
+          OUTPUT=$(echo "$NAMES" | jq -R -s -c 'split("\n")[1:-1]')
+          echo "files={\"modules\":$OUTPUT}" >> $GITHUB_OUTPUT
 
-          # WORKFLOWS=$(ls .github/workflows)
-          # for WORKFLOW in $WORKFLOWS ; do
-          #   NAME=$(cat .github/workflows/$WORKFLOW | grep -G '^name :' | sed 's/name\s*:\s\+\(\S*\)/\1/')
-          #   NAMES="$NAMES%0A$NAME"
-          # done;
-          echo "files=NAMES" >> GITHUB_OUTPUT
-      - run: echo ${{ steps.workflow_files.outputs.files }}
-      - run: echo ${{ steps.workflow_files.outputs.ff }}
-      - run: echo ${{ steps.workflow_files.outputs.ffa }}
-  #
-  # runs_check :
-  #   needs :
-  #     - get_modules
-  #   # strategy :
-  #   #   matrix : ${{ fromJSON( needs.get_modules.outputs.workflow_files ) }}
-  #   runs-on : ubuntu-latest
-  #   steps :
-  #     - run : echo ${{ needs.get_modules.outputs.workflow_files }}
-  #     - run : echo ${{ fromJSON( needs.get_modules.outputs.workflow_files ) }}
-  #
-  #     - run : echo ${{ needs.get_modules.outputs.files }}
-  #     - run : echo ${{ fromJSON( needs.get_modules.outputs.files ) }}
+  runs_check :
+    needs :
+      - get_modules
+    strategy :
+      matrix : ${{ fromJSON( needs.get_modules.outputs.workflow_files ) }}
+    runs-on : ubuntu-latest
+    steps :
+      - run : echo ${{ needs.get_modules.outputs.workflow_files }}
+      - run : echo ${{ fromJSON( needs.get_modules.outputs.workflow_files ) }}
 
 # on :
 #   push
