--- a/.github/workflows/Delete.yml
+++ b/.github/workflows/Delete.yml
@@ -1,46 +1,46 @@
-
-name : runs_clean
-
-on :
-  workflow_dispatch :
-    inputs :
-      repo :
-        description : 'repo'
-        required : true
-      days :
-        description : 'Older than number of days.'
-        required : true
-        type : number
-        default : 0
-      save :
-        description : 'Save min runs.'
-        required : true
-        type : number
-        default : 0
-      workflow_id :
-        description : 'Workflow id or filename.'
-        required : false
-        default : ""
-      branch :
-        description : 'Branch.'
-        required : false
-        default : ""
-      run_conclusions :
-        description : 'Run conclusions.'
-        required : false
-        default : ""
-
-jobs:
-  delete_runs:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Delete workflow runs
-        uses: dmvict/clean-workflow-runs@v1
-        with:
-          token: ${{ secrets.PRIVATE_TOKEN }}
-          repo: dmvict/${{ inputs.repo }}
-          branch : ${{ inputs.branch }}
-          run_conclusions : ${{ inputs.run_conclusions }}
-          workflow_id : ${{ inputs.workflow_id }}
-          save_period: ${{ inputs.days }}
-          save_min_runs_number: ${{ inputs.save }}
+#
+# name : runs_clean
+#
+# on :
+#   workflow_dispatch :
+#     inputs :
+#       repo :
+#         description : 'repo'
+#         required : true
+#       days :
+#         description : 'Older than number of days.'
+#         required : true
+#         type : number
+#         default : 0
+#       save :
+#         description : 'Save min runs.'
+#         required : true
+#         type : number
+#         default : 0
+#       workflow_id :
+#         description : 'Workflow id or filename.'
+#         required : false
+#         default : ""
+#       branch :
+#         description : 'Branch.'
+#         required : false
+#         default : ""
+#       run_conclusions :
+#         description : 'Run conclusions.'
+#         required : false
+#         default : ""
+#
+# jobs:
+#   delete_runs:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Delete workflow runs
+#         uses: dmvict/clean-workflow-runs@v1
+#         with:
+#           token: ${{ secrets.PRIVATE_TOKEN }}
+#           repo: dmvict/${{ inputs.repo }}
+#           branch : ${{ inputs.branch }}
+#           run_conclusions : ${{ inputs.run_conclusions }}
+#           workflow_id : ${{ inputs.workflow_id }}
+#           save_period: ${{ inputs.days }}
+#           save_min_runs_number: ${{ inputs.save }}
