--- a/.github/workflows/OnRun.yml
+++ b/.github/workflows/OnRun.yml
@@ -1,34 +1,34 @@
-
-name : on_run
-on :
-  workflow_dispatch
-
-# on:
-#   workflow_run:
-#     workflows: [ push1, push2 ]
-#     types:
-#       - completed
-
-jobs:
-  runs_check :
-    strategy :
-      matrix :
-        modules : [ Push1, Push2 ]
-    runs-on : ubuntu-latest
-    steps :
-      - name : Check workflow run status
-        id : check_ci
-        uses :  LASER-Yi/workflow-status@v0.1.0
-        with :
-          token : ${{ secrets.GITHUB_TOKEN }}
-          workflow : ${{ matrix.modules }}.yml
-          branch : alpha
-      - name : Check failure conclusion
-        if : ${{ steps.check_ci.outputs.conclusion == 'failure' }}
-        run : exit 1
-      - name : Check cancelled conclusion
-        if : ${{ steps.check_ci.outputs.conclusion == 'cancelled' }}
-        run : exit 1
-      - name : Check skipped conclusion
-        if : ${{ steps.check_ci.outputs.conclusion == 'skipped' }}
-        run : exit 1
+# 
+# name : on_run
+# on :
+#   workflow_dispatch
+# 
+# # on:
+# #   workflow_run:
+# #     workflows: [ push1, push2 ]
+# #     types:
+# #       - completed
+# 
+# jobs:
+#   runs_check :
+#     strategy :
+#       matrix :
+#         modules : [ Push1, Push2 ]
+#     runs-on : ubuntu-latest
+#     steps :
+#       - name : Check workflow run status
+#         id : check_ci
+#         uses :  LASER-Yi/workflow-status@v0.1.0
+#         with :
+#           token : ${{ secrets.GITHUB_TOKEN }}
+#           workflow : ${{ matrix.modules }}.yml
+#           branch : alpha
+#       - name : Check failure conclusion
+#         if : ${{ steps.check_ci.outputs.conclusion == 'failure' }}
+#         run : exit 1
+#       - name : Check cancelled conclusion
+#         if : ${{ steps.check_ci.outputs.conclusion == 'cancelled' }}
+#         run : exit 1
+#       - name : Check skipped conclusion
+#         if : ${{ steps.check_ci.outputs.conclusion == 'skipped' }}
+#         run : exit 1
