--- a/.github/workflows/Push1.yml
+++ b/.github/workflows/Push1.yml
@@ -9,9 +9,6 @@ jobs:
     steps :
       - uses: Wandalen/wretry.action@v1.4.4
         with:
-          action: action/node-setup@2.3.0
-          with: |
-            node-version: 14.x
-            architecture: x64
+          action: dmvict/test.action
           attempt_limit: 3
           attempt_delay: 2000
