--- a/.github/workflows/Push1.yml
+++ b/.github/workflows/Push1.yml
@@ -9,6 +9,8 @@ jobs:
     steps :
       - uses: Wandalen/wretry.action@v1.4.4
         with:
-          action: dmvict/test.action
+          action: dmvict/test.action@v0.0.2
+          with: |
+            value: 2
           attempt_limit: 3
           attempt_delay: 2000
