--- a/.github/workflows/Push1.yml
+++ b/.github/workflows/Push1.yml
@@ -10,10 +10,13 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: alt
-      - uses: Wandalen/wretry.action@v1.4.4
+      - uses: Wandalen/wretry.action@v1.4.5
         with:
-          action: dmvict/test.action@v0.0.2
-          with: |
-            value: 2
+          command: |
+            if [[ $HOME == "/home/github" ]] ; then
+              echo github
+            else
+              echo nongithub
+            fi
           attempt_limit: 3
           attempt_delay: 2000
