--- a/.github/workflows/Push1.yml
+++ b/.github/workflows/Push1.yml
@@ -11,7 +11,12 @@ jobs:
         with:
           action: dmvict/test.action@alt
           with: |
-            singleline: abc
+            singleline: |
+              some
+
+              foo
+
+                bar
             multiline: |
               some
 
