--- a/.github/workflows/Push1.yml
+++ b/.github/workflows/Push1.yml
@@ -12,7 +12,8 @@ jobs:
           action: oasdiff/oasdiff-action/breaking@main
           with: |
             base: './openapi.yaml'
-            revision: https://raw.githubusercontent.com/Tufin/oasdiff/main/data/openapi-test3.yaml
+            revision: https://raw.githubusercontent.com/Tufin/oasdiff/main/data/openapi-test1.yaml
+            # revision: https://raw.githubusercontent.com/Tufin/oasdiff/main/data/openapi-test3.yaml
             # fail-on-diff: true
           attempt_limit: 3
           attempt_delay: 2000
